codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_item_name.snap
---
source: tui/src/app/tests.rs
expression: snapshot
---
主代理 [默认] | 00000000-0000-0000-0000-000000000123
Robie [explorer] | 00000000-0000-0000-0000-000000000123
Robie | 00000000-0000-0000-0000-000000000123
[explorer] | 00000000-0000-0000-0000-000000000123
代理 | 00000000-0000-0000-0000-000000000123
