codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)       │
│                                    │
│ 模型： gpt-test high   /model 更改 │
│ 目录： /tmp/project                │
╰────────────────────────────────────╯
