codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭───────────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)              │
│                                           │
│ 模型： gpt-5.4 xhigh   快速   /model 更改 │
│ 目录： /tmp/project                       │
╰───────────────────────────────────────────╯
