codex-rs/tui/src/snapshots/codex_tui__app__tests__replace_goal_confirmation.snap
---
source: tui/src/app/tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Replace goal?
  New objective: New goal

› 1. Replace current goal  Set the new objective and start it now
  2. Cancel                Keep the current goal

  按  enter 确 认 ， 或 按  esc 返 回
