codex-rs/tui/src/snapshots/codex_tui__app__tests__replayed_file_change_approval.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
  是 否 要 进 行 以 下 修 改 ？

  说 明 ： 应 用 建 议 的 文 件 修 改
  目 标 ： /tmp/project/visible-target.md

› 1. 是 ， 继 续  (y)
  2. 是 ， 并 且 不 再 询 问 这 些 文 件  (a)
  3. 否 ， 并 告 诉  Codex 应 如 何 调 整  (esc)

  按  enter 确 认 ， 或 按  esc 取 消
